Updated front matter from toml to yaml

--- a/content/coding/web/javascript/intro.html
+++ b/content/coding/web/javascript/intro.html
@@ -1,17 +1,17 @@
-+++
-type = "javascript"
-title = "Introduzione al linguaggio Javascript"
-description = "Introduzione al linguaggio Javascript"
-date = 2020-04-01
-publishdate = 2020-04-01
-lastmod = 2020-04-01
-categories = ["coding", "web", "javascript"]
-keywords = ["coding", "web", "javascript"]
-draft = false
-toc = false
-notesforauthors = "Introduzione al linguaggio Javascript"
-summary = "Introduzione al linguaggio Javascript"
-+++
+---
+type: "javascript"
+title: "Introduzione al linguaggio Javascript"
+description: "Introduzione al linguaggio Javascript"
+date: 2020-04-01
+publishdate: 2020-04-01
+lastmod: 2020-04-01
+categories: ["coding", "web", "javascript"]
+keywords: ["coding", "web", "javascript"]
+draft: false
+toc: false
+notesforauthors: "Introduzione al linguaggio Javascript"
+summary: "Introduzione al linguaggio Javascript"
+---
 
 <h1 id="top">Introduzione al linguaggio Javascript</h1>
 
