--- a/content/coding/web/javascript/primi_script.html
+++ b/content/coding/web/javascript/primi_script.html
@@ -1,17 +1,17 @@
-+++
-type = "javascript"
-title = "Primi script"
-description = "Primi script"
-date = 2020-04-03
-publishdate = 2020-04-03
-lastmod = 2020-04-03
-categories = ["coding", "web", "javascript"]
-keywords = ["coding", "web", "javascript"]
-draft = false
-toc = false
-notesforauthors = "Primi script"
-summary = "Primi script"
-+++
+---
+type: "javascript"
+title: "Primi script"
+description: "Primi script"
+date: 2020-04-03
+publishdate: 2020-04-03
+lastmod: 2020-04-03
+categories: ["coding", "web", "javascript"]
+keywords: ["coding", "web", "javascript"]
+draft: false
+toc: false
+notesforauthors: "Primi script"
+summary: "Primi script"
+---
 
 <h1 id="top">Primi script</h1>
 
