--- a/content/coding/web/javascript/tipi_di_dato.html
+++ b/content/coding/web/javascript/tipi_di_dato.html
@@ -1,17 +1,17 @@
-+++
-type = "javascript"
-title = "Tipi di dato"
-description = "Tipi di dato"
-date = 2020-04-02
-publishdate = 2020-04-02
-lastmod = 2020-04-02
-categories = ["coding", "web", "javascript"]
-keywords = ["coding", "web", "javascript"]
-draft = false
-toc = false
-notesforauthors = "Tipi di dato"
-summary = "Tipi di dato"
-+++
+---
+type: "javascript"
+title: "Tipi di dato"
+description: "Tipi di dato"
+date: 2020-04-02
+publishdate: 2020-04-02
+lastmod: 2020-04-02
+categories: ["coding", "web", "javascript"]
+keywords: ["coding", "web", "javascript"]
+draft: false
+toc: false
+notesforauthors: "Tipi di dato"
+summary: "Tipi di dato"
+---
 
 <h1 id="top">Tipi di dato</h1>
 
