Updated front matters and titles

--- a/content/coding/web/javascript/intro.html
+++ b/content/coding/web/javascript/intro.html
@@ -1,6 +1,6 @@
 ---
 type: "javascript"
-title: "Introduzione al linguaggio Javascript"
+title: "01 - Introduzione al linguaggio Javascript"
 description: "Introduzione al linguaggio Javascript"
 date: 2020-04-01
 publishdate: 2020-04-01
@@ -9,7 +9,6 @@ categories: ["coding", "web", "javascript"]
 keywords: ["coding", "web", "javascript"]
 draft: false
 toc: false
-notesforauthors: "Introduzione al linguaggio Javascript"
 summary: "Introduzione al linguaggio Javascript"
 ---
 
