--- a/content/coding/web/javascript/primi_script.html
+++ b/content/coding/web/javascript/primi_script.html
@@ -1,6 +1,6 @@
 ---
 type: "javascript"
-title: "Primi script"
+title: "03 - Primi script"
 description: "Primi script"
 date: 2020-04-03
 publishdate: 2020-04-03
@@ -9,7 +9,6 @@ categories: ["coding", "web", "javascript"]
 keywords: ["coding", "web", "javascript"]
 draft: false
 toc: false
-notesforauthors: "Primi script"
 summary: "Primi script"
 ---
 
@@ -122,6 +121,9 @@ summary: "Primi script"
 
 <p><img src="/static/coding/web/javascript/javascript-console-primi-script.png" alt="Browser's console" width="70%" height="auto"></p>
 
+<!-- TODO usa strict mode -->
+
+<!-- TODO aggiungi commenti -->
 
 <script>
     console.time("tempo impiegato:");
