--- a/content/coding/web/javascript/tipi_di_dato.html
+++ b/content/coding/web/javascript/tipi_di_dato.html
@@ -1,6 +1,6 @@
 ---
 type: "javascript"
-title: "Tipi di dato"
+title: "02 - Tipi di dato"
 description: "Tipi di dato"
 date: 2020-04-02
 publishdate: 2020-04-02
@@ -9,11 +9,12 @@ categories: ["coding", "web", "javascript"]
 keywords: ["coding", "web", "javascript"]
 draft: false
 toc: false
-notesforauthors: "Tipi di dato"
 summary: "Tipi di dato"
 ---
 
 <h1 id="top">Tipi di dato</h1>
+
+<!-- TODO aggiungere numeri binari -->
 
 <p>I tipi di dato previsti da Ecmascript sono <code>String</code> (le frasi), <code>Number</code>, <code>Boolean</code> (valori vero/falso), <code>Array</code> (un elenco di valori), <code>Object</code>, <code>null</code> e <code>undefined</code>.</p>
 <!-- TODO Add BigInt type, the JavaScript integers with arbitrary precision -->
