--- a/static/static/coding/web/p5js/try.html
+++ b/static/static/coding/web/p5js/try.html
@@ -3,16 +3,18 @@
     </head>
     <body>
         <h1>P5</h1>
-        <div id="loop_diff"></div>
+        <div id="counter"></div>
         
         <!-- file:// -->
         <script src="./../../../js/p5-1.2.0-min.js"></script>
+        <script src="./../../../js/p5.sound-1.2.0-min.js"></script>
         <script src="./p5Utils.js"></script>
-        <script src="./loops_different_shapes_exe_01.js"></script>
+        <script src=".../progettoFattoriaAnimaliSoluzione.js"></script>
         
         <!-- https:// -->
         <script src="http://127.0.0.1:1313/static/js/p5-1.2.0-min.js"></script>
+        <script src="http://127.0.0.1:1313/static/js/p5.sound-1.2.0-min.js"></script>
         <script src="http://127.0.0.1:1313/static/coding/web/p5js/p5Utils.js"></script>
-        <script src="http://127.0.0.1:1313/static/coding/web/p5js/loops_different_shapes_exe_01.js"></script>
+        <script src="http://127.0.0.1:1313/static/coding/web/p5js/progettoFattoriaAnimaliSoluzione.js"></script>
     </body>
 </html>
